--- a/ChronicKidneyDisease.ipynb
+++ b/ChronicKidneyDisease.ipynb
@@ -26115,7 +26115,7 @@
    ],
    "source": [
     "# Create PostgreSQL AWS RDS Database Connection\n",
-    "engine = create_engine(\"postgres+psycopg2://postgresp:Holand12@database-1mlp.cqxdmx5wbnw5.us-east-2.rds.amazonaws.com:5432/MachineLearning\")\n",
+    "engine = create_engine(\"postgres+psycopg2://postgresp:H*******@database-1mlp.cqxdmx5wbnw5.us-east-2.rds.amazonaws.com:5432/MachineLearning\")\n",
     "conn = engine.connect()\n",
     "print(engine.table_names())"
    ]
